# SWMF-MCP-Server

./: .gitignore  .mcp.json  Makefile  README.md  Run information _ CCMC.md  SWMF  SWMFSOLAR  mag_ingestion.md  pyproject.toml  session.md
.github/: SWMF_CORE_DISCIPLINE.md  copilot-instructions.md
docs/: SWMF.md  api_v2_schema.yaml  architecture_domains.md  capability_enrichment_plan.md  embedding_plan.md  idl.md  idl_visualization_skill_protocol.md  inspect-param-plan.md  integration_plan.md  reconstruct_plan.md  replication_eval_criteria.md  replication_improvement_plan.md  run_replication_eval_eclipse2024.md  run_replication_plan.md  skill_mcp_protocol.md  skills_cli_migration_plan.md  skills_plan.md  swmf-rundir.md
eval/: README.md  expert_queue.md
scripts/: cache_model.py  install.py  mine_param_corpus.py  preindex.py
tests/: test_api_v2_phase1.py  test_build_run_makefile_capabilities.py  test_catalog_domain_architecture.py  test_cli.py  test_corpus_miner.py  test_debug_context_pack_tools.py  test_debug_protocol_compatibility.py  test_debug_protocol_state_machine.py  test_diagnose_error_tool.py  test_diagnose_param_tool.py  test_idl_batch_shell.py  test_idl_service.py  test_index.py  test_install_script.py  test_knowledge_base.py  test_knowledge_embeddings.py  test_knowledge_query_understanding.py  test_knowledge_service_architecture.py  test_liu2026_curlb0_regression.py  test_param_schema_resource.py  test_path_search_guidance_core.py  test_postprocess_planning_tools.py  test_reference_domain_architecture.py  test_replication_phase1.py  test_semantic_index.py  (+16 more)
(+233 files in other folders)
