[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swmf-mcp-prototype"
version = "0.1.0"
description = "Small demoable MCP server for SWMF workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "astropy>=7.2.0",
  "httpx>=0.28.1",
  "mcp[cli]>=1.0.0,<2.0.0",
  "pytest>=9.0.2",
]
authors = [
  { name = "Keheng Zhu" }
]

[project.scripts]
swmf-mcp-server = "swmf_mcp_server.server:main"

[project.optional-dependencies]
test = [
  "pytest>=8.2.0",
  "astropy>=6.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
